--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                             <div class="media align-items-center mb-3">
                                 <img class="mr-3" src="assets/imgs/avatar.jpg" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, Pigga Landing page">
                                 <div class="media-body">
-                                    <h6 class="mt-1 mb-0">John Doe</h6>
+                                    <h6 class="mt-1 mb-0">MD Shamsur Rahman Arif</h6>
                                     <small class="text-muted mb-0">Business Analyst</small>     
                                 </div>
                             </div>
