--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Aperiam incidunt dicta</h5>
-                                <p class="float-right text-primary">$25</p>
+                                <p class="float-right text-primary">৳ 1025</p>
                             </div>
                             <div class="body">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing Eos, earum dicta est veniam beatae libero!</p>
@@ -143,7 +143,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Facere molestiae quaerat</h5>
-                                <p class="float-right text-primary">$35</p>
+                                <p class="float-right text-primary">৳ 1035</p>
                             </div>
                             <div class="body">
                                 <p>Voluptatem voluptate ad fugit aliquam, laboriosam neque vero incidunt itaque.</p>
@@ -159,7 +159,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Veniam Beatae Libero</h5>
-                                <p class="float-right text-primary">$18</p>
+                                <p class="float-right text-primary">৳ 1018</p>
                             </div>
                             <div class="body">
                                 <p>Accusamus libero quo tempore suscipit molestias qui quam illo facere aspernatur esse! Doloribus?</p>
@@ -175,7 +175,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Incidunt Eius</h5>
-                                <p class="float-right text-primary">$30</p>
+                                <p class="float-right text-primary">৳ 1030</p>
                             </div>
                             <div class="body">
                                 <p>Doloremque maiores tempore, nostrum rerum nihil distinctio expedita voluptates eos deserunt.</p>
@@ -191,7 +191,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Nihil dDstinctio</h5>
-                                <p class="float-right text-primary">$24</p>
+                                <p class="float-right text-primary">৳ 1024</p>
                             </div>
                             <div class="body">
                                 <p>Doloremque maiores tempore, nostrum rerum expedita incidunt eius voluptates eos deserunt.</p>
@@ -207,7 +207,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Dignissimos quidem</h5>
-                                <p class="float-right text-primary">$44</p>
+                                <p class="float-right text-primary">৳ 1044</p>
                             </div>
                             <div class="body">
                                 <p>Doloremque maiores tempore, nostrum rerum nihil distinctio expedita voluptates eos deserunt.</p>
@@ -235,7 +235,7 @@
                                         Dolorem Exmaiores
                                         <p class="mt-1 mb-0">Numquam dolor dolores molestiae maiores quidem.</p>
                                     </div>
-                                    <h6 class="float-right text-primary">$12</h6>
+                                    <h6 class="float-right text-primary">৳ 1012</h6>
                                 </div>
                             </a>
                         </div>
@@ -246,7 +246,7 @@
                                         Aperiam incidunt dicta
                                         <p class="mt-1 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                     </div>
-                                    <h6 class="float-right text-primary">$23</h6>
+                                    <h6 class="float-right text-primary">৳ 1023</h6>
                                 </div>
                             </a>
                         </div>
@@ -257,7 +257,7 @@
                                         Animi repellat labore
                                         <p class="mt-1 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                     </div>
-                                    <h6 class="float-right text-primary">$32</h6>
+                                    <h6 class="float-right text-primary">৳ 1032</h6>
                                 </div>
                             </a>
                         </div>
@@ -268,7 +268,7 @@
                                         Quo ipsum similique 
                                         <p class="mt-2 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                     </div>
-                                    <h6 class="float-right text-primary">$17</h6>
+                                    <h6 class="float-right text-primary">৳ 1017</h6>
                                 </div>
                             </a>
                         </div>
@@ -279,7 +279,7 @@
                                         Est nam tempore
                                         <p class="mt-2 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                     </div>
-                                    <h6 class="float-right text-primary">$21</h6>
+                                    <h6 class="float-right text-primary">৳ 1021</h6>
                                 </div>
                             </a>
                         </div>
@@ -290,7 +290,7 @@
                                         Nesciunt ab veniam
                                         <p class="mt-2 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                     </div>
-                                    <h6 class="float-right text-primary">$10</h6>
+                                    <h6 class="float-right text-primary">৳ 1010</h6>
                                 </div>
                             </a>
                         </div>
