--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
                         </div>
                         <div class="info">
                             <div class="head clearfix">
-                                <h5 class="title float-left">Aperiam incidunt dicta</h5>
+                                <h5 class="title float-left">Sesame Chicken Wings</h5>
                                 <p class="float-right text-primary">৳ 1025</p>
                             </div>
                             <div class="body">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing Eos, earum dicta est veniam beatae libero!</p>
+                                <p>Mixed vegetable spring rolls with a sweet chilli sauce !</p>
                             </div>
                         </div>
                     </a>
@@ -141,11 +141,12 @@
                         </div>
                         <div class="info">
                             <div class="head clearfix">
-                                <h5 class="title float-left">Facere molestiae quaerat</h5>
+                                <h5 class="title float-left">Khanom Pang Na Goong </h5>
                                 <p class="float-right text-primary">৳ 1035</p>
                             </div>
                             <div class="body">
-                                <p>Voluptatem voluptate ad fugit aliquam, laboriosam neque vero incidunt itaque.</p>
+                                <p>Crunchy sesame toast filled with fresh prawn
+                                    and Thai seasoning </p>
                             </div>
                         </div>
                     </a>
