--- a/index.html
+++ b/index.html
@@ -158,11 +158,12 @@
                         </div>
                         <div class="info">
                             <div class="head clearfix">
-                                <h5 class="title float-left">Veniam Beatae Libero</h5>
+                                <h5 class="title float-left">Calamari</h5>
                                 <p class="float-right text-primary">৳ 1018</p>
                             </div>
                             <div class="body">
-                                <p>Accusamus libero quo tempore suscipit molestias qui quam illo facere aspernatur esse! Doloribus?</p>
+                                <p>Deep fried squid served with siracha chilli
+                                    dipping sauce</p>
                             </div>
                         </div>
                     </a>
@@ -232,7 +233,7 @@
                             <a href="#" class="pb-3 mx-3 d-block text-dark text-decoration-none border border-left-0 border-top-0 border-right-0">
                                 <div class="d-flex">
                                     <div class="flex-grow-1">
-                                        Dolorem Exmaiores
+                                        Classic 4 Cheese
                                         <p class="mt-1 mb-0">Numquam dolor dolores molestiae maiores quidem.</p>
                                     </div>
                                     <h6 class="float-right text-primary">৳ 1012</h6>
@@ -243,7 +244,7 @@
                             <a href="#" class="pb-3 mx-3 d-block text-dark text-decoration-none border border-left-0 border-top-0 border-right-0">
                                 <div class="d-flex">
                                     <div class="flex-grow-1">
-                                        Aperiam incidunt dicta
+                                        Tropical 4 Cheese
                                         <p class="mt-1 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                     </div>
                                     <h6 class="float-right text-primary">৳ 1023</h6>
@@ -254,7 +255,7 @@
                             <a href="#" class="pb-3 mx-3 d-block text-dark text-decoration-none border border-left-0 border-top-0 border-right-0">
                                 <div class="d-flex">
                                     <div class="flex-grow-1">
-                                        Animi repellat labore
+                                        Sausage 4 Cheese
                                         <p class="mt-1 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                     </div>
                                     <h6 class="float-right text-primary">৳ 1032</h6>
@@ -265,7 +266,7 @@
                             <a href="#" class="pb-3 mx-3 d-block text-dark text-decoration-none border border-left-0 border-top-0 border-right-0">
                                 <div class="d-flex">
                                     <div class="flex-grow-1">
-                                        Quo ipsum similique 
+                                        Meaty 4 Cheese
                                         <p class="mt-2 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                     </div>
                                     <h6 class="float-right text-primary">৳ 1017</h6>
@@ -276,7 +277,7 @@
                             <a href="#" class="pb-3 mx-3 d-block text-dark text-decoration-none border border-left-0 border-top-0 border-right-0">
                                 <div class="d-flex">
                                     <div class="flex-grow-1">
-                                        Est nam tempore
+                                        Sizzler 4 Cheese
                                         <p class="mt-2 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                     </div>
                                     <h6 class="float-right text-primary">৳ 1021</h6>
@@ -287,7 +288,7 @@
                             <a href="#" class="pb-3 mx-3 d-block text-dark text-decoration-none border border-left-0 border-top-0 border-right-0">
                                 <div class="d-flex">
                                     <div class="flex-grow-1">
-                                        Nesciunt ab veniam
+                                        Loaded 4 Cheese
                                         <p class="mt-2 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                     </div>
                                     <h6 class="float-right text-primary">৳ 1010</h6>
