--- a/index.html
+++ b/index.html
@@ -95,7 +95,11 @@
                 <div class="col-md-6">
                     <h6 class="section-subtitle">The Great Story</h6>
                     <h3 class="section-title">Our Culinary Journey</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic illo a, aut, eum nesciunt obcaecati deserunt ipsam nostrum voluptate recusandae?</p>
+                    <p>Our authentic Thai food "Johnny Rice" is served Tuesday - Friday lunch.
+
+                        ​
+                        
+                        Grab your Takeaway boxes, order your drinks and plot up at a table in our outdoor area to enjoy your afternoon.</p>
                 </div>
                 <div class="col-md-6 order-1 order-sm-first">
                     <div class="row">
