--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 <div class="col-md-4 my-3">
                     <div class="team-wrapper text-center">
                         <img src="assets/imgs/chef-3.jpg" class="circle-120 rounded-circle mb-3 shadow" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, Pigga Landing page">
-                        <h5 class="my-3">Richard Reb</h5>
+                        <h5 class="my-3">Anika Datta Bithi</h5>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente suscipit, odio nulla reiciendis!</p>
                         <h6 class="socials mt-3">
                             <a href="javascript:void(0)" class="px-2"><i class="ti-facebook"></i></a>
