--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                                     <small class="text-muted mb-0">Business Analyst</small>     
                                 </div>
                             </div>
-                            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus enim modi, id dicta reiciendis itaque.</p>
+                            <p class="mb-0">Super spontaneous reception by the staff, it really gave a warm and welcome feeling. Good service and delicious dishes, we could hardly choose. In short, we will definitely come back here more often!</p>
                         </div>
                     </div>
                 </div>
