--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                                     <small class="text-muted mb-0">Insurance Agent</small>      
                                 </div>
                             </div>
-                            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus enim modi, id dicta reiciendis itaque.</p>
+                            <p class="mb-0">With 6 persons Saturday evening we had a delicious dinner! Everything freshly prepared, delicious, very nice service and value for money, surprising dishes. We will definitely be back! 😘</p>
                         </div>
                     </div>
                 </div>
@@ -402,7 +402,7 @@
                                     <small class="text-muted mb-0">Residential Appraiser</small>        
                                 </div>
                             </div>
-                            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus enim modi, id dicta reiciendis itaque.</p>
+                            <p class="mb-0">Really FANTASTIC!!! If I could give 10 stars, I would. Nice, cosy place. Very friendly staff (English speaking, was no problem for us). The food was really phenomenal, especially the chicken with honey. To be repeated!</p>
                         </div>
                     </div>
                 </div>
