--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             </div>
         </div>
     </nav>
+
+
+
+    
     <!-- End Of Second Navigation --> 
     <!-- Page Header -->
     <header class="header">
@@ -492,4 +496,32 @@
     <script src="assets/js/pigga.js"></script>
 
 </body>
+
+<body>
+    <div class="container">
+        <form action="" id="contactForm">
+            <div class="alert">Your message sent</div>
+
+            <div class="inputBox">
+                <input type="text" id="name" placeholder="Your name...." />
+            </div>
+
+            <div class="inputBox">
+                <input type="email" id="emailid" placeholder="Your Email....." />
+            </div>
+
+            <div class="inputBox">
+                <textarea id="msgContent" cols="30" rows="10" placeholder="Message"></textarea>
+            </div>
+
+            <div class="inputBox">
+                <button type="submit">Submit</button>
+            </div>
+        </form>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
+    <script src="./mail.js"></script>
+</body>
+
 </html>
