--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#testmonial">Testmonials</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#testmonial">About us</a>
+                    </li>
                 </ul> 
                 <ul class="navbar-nav ml-auto">
                     
@@ -68,7 +71,7 @@
             <img src="assets/imgs/logo.svg" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, Pigga Landing page" class="logo">
             <h1 class="subtitle">Welcome To Our Restaurant</h1>
             <h1 class="title">Really Fresh &amp; Tasty</h1> 
-            <a class="btn btn-primary mt-3" href="#book-table">Book A Table</a> 
+            <a class="btn btn-primary mt-3" href="order.html">Book A Table</a> 
         </div>      
     </header>
     <!-- End Of Page Header --> 
