--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="assets/imgs/navbar-brand.svg" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, Pigga Landing page">
+                <a class="nav-link text-primary" href="#home">PIZZAFY<span class="pl-2 text-muted"></span></a>
             </a>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
@@ -68,7 +69,7 @@
     <!-- Page Header -->
     <header class="header">
         <div class="overlay">
-            <img src="assets/imgs/logo.svg" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, Pigga Landing page" class="logo">
+            <img src="assets/imgs/navbar-brand.svg" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, Pigga Landing page" class="logo">
             <h1 class="subtitle">Welcome To Our Restaurant</h1>
             <h1 class="title">Really Fresh &amp; Tasty</h1> 
             <a class="btn btn-primary mt-3" href="order.html">Book A Table</a> 
@@ -86,7 +87,7 @@
                     <p class="mb-1 font-weight-bold">Friday - Saturday : <span class="font-weight-normal pl-2 text-muted">7:00 am - Midnight</span></p>
                     <p class="mb-1 font-weight-bold">Saturday - Sunday : <span class="font-weight-normal pl-2 text-muted">9:00 am - 12:00 pm</span></p>
 
-                    <a href="#book-table" class="btn btn-primary btn-sm w-md mt-4">Book a table</a>
+                    <a href="order.html" class="btn btn-primary btn-sm w-md mt-4">Book a table</a>
                 </div>
                 <div class="col-md-6">
                     <div class="row">
@@ -309,7 +310,7 @@
                             </a>
                         </div>
                     </div>
-                    <a href="#book-table" class="btn btn-primary mt-4">Book A Table</a>
+                    <a href="order.html" class="btn btn-primary mt-4">Book A Table</a>
                 </div>
             </div>                  
         </div>
