--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="assets/imgs/navbar-brand.svg" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, Pigga Landing page">
-                <a class="nav-link text-primary" href="#home">PIZZAFY<span class="pl-2 text-muted"></span></a>
+                <a class="nav-link text-primary" href="index.html">PIZZAFY<span class="pl-2 text-muted"></span></a>
             </a>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
@@ -49,7 +49,10 @@
                         <a class="nav-link" href="#testmonial">Testmonials</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#testmonial">About us</a>
+                        <a class="nav-link" href="order.html">About us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">Full Menu</a>
                     </li>
                 </ul> 
                 <ul class="navbar-nav ml-auto">
