--- a/index.html
+++ b/index.html
@@ -511,6 +511,14 @@
                         <a href="javascript:void(0)" class="px-2"><i class="ti-twitter"></i></a>
                         <a href="javascript:void(0)" class="px-2"><i class="ti-instagram"></i></a>
                         <a href="javascript:void(0)" class="px-2"><i class="ti-google"></i></a>
+			     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">Full Menu</a>
+                    </li>
+			 </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="order.html">order</a>
+                    </li>
                     </h6>
                 </div>
             </div>
