--- a/index.html
+++ b/index.html
@@ -452,6 +452,8 @@
                     <p id="success "></p>
                 </div>
             </form>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
+    <script src="./mail.js"></script>
         </div>
     <!-- End OF Book Table Section -->
 
