--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     
     <nav class="navbar">
         <a href="#home">home</a>
-        <a href="#about">about</a>
+        <a href="about.html">about</a>
         <a href="#popular">popular</a>
         <a href="#menu">menu</a>
         <a href="#order">order</a>
