--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         <a href="about.html">about</a>
         <a href="#popular">popular</a>
         <a href="#menu">menu</a>
-        <a href="#order">order</a>
+        <a href="fullmenu.html">Full Menu</a>
     </nav>
 
     <div class="icons">
